[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mose_api"
version = "0.1.0"
description = "Stripped-down forked version of MOSE-api for evaluation purposes only."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy", "Pillow", "tqdm", "opencv-python", "scikit-image"]

[project.urls]
"Homepage" = "https://github.com/henghuiding/MOSE-api"